--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,14 +1,21 @@
 quad_x0: 0.0
-quad_y0: 0.5
+quad_y0: 0.0
 quad_z0: 1.5
 quad_ga0: 0.0
 
 arm_q1: -1.57
 arm_q2: 0.0
 
+qxx: 0.1
+qyy: 1.0
+qzz: 1.0
+qgg: 1.0
+qq1: 0.1
+qq2: 0.1
+
 goal_x: 3.0
 goal_y: 0.0
-goal_z: 0.6
+goal_z: 0.7
 
 cyl_obs_x: 1.5
 cyl_obs_y: 0.7
@@ -37,6 +44,4 @@ table_h: 0.25
 obs_r: 0.05
 
 te: 5.0
-te1: 5.0
-te2: 2.0
-numSteps: 20
+numSteps: 10
