--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>opam</name>
+  <name>quad_arm_trajectory_generation</name>
   <version>0.0.0</version>
-  <description>The opam package</description>
+  <description>The quad_arm_trajectory_generation package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
